convert umap mandate request response callouts to tables

--- a/content/payments/umap/mandates/otm/create.mdx
+++ b/content/payments/umap/mandates/otm/create.mdx
@@ -93,17 +93,44 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
     "transactionNote": "Transaction note"
 }`}
             </CodeBlockWithCopy>
-            <Callout type="warning">
-                <ul>
-                    <li><code>frequency</code> must be <code>one time</code> for creating a one time mandate.</li>
-                    <li><code>creationMode</code> must be <code>qr</code> or <code>intent</code> for creating an intent based mandate.</li>
-                    <li><code>initiationMode</code> must be <code>01</code> if <code>creationMode</code> is <code>qr</code></li>
-                    <li><code>initiationMode</code> must be <code>04</code> if <code>creationMode</code> is <code>intent</code></li>
-                    <li><code>recurrenceRule</code> must be <code>on</code> for creating a one time mandate.</li>
-                    <li><code>recurrenceValue</code> must be <code>0</code> for creating a one time mandate.</li>
-                    <li><code>autoExecute</code> and <code>autoPreNotify</code> must be <code>false</code> for creating a one time mandate.</li>
-                </ul>
-            </Callout>
+            <p><b>Request body parameter values for creating an intent based one time mandate</b></p>
+            <table>
+                <tr>
+                    <th>parameter</th>
+                    <th>value</th>
+                </tr>
+                <tr>
+                    <td>frequency</td>
+                    <td>one time</td>
+                </tr>
+                <tr>
+                    <td>creationMode</td>
+                    <td>intent or qr</td>
+                </tr>
+                <tr>
+                    <td>initiationMode</td>
+                    <td>
+                        <p>01 if creationMode is qr</p>
+                        <p>04 if creationMode is intent</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>recurrenceValue</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>recurrenceRule</td>
+                    <td>on</td>
+                </tr>
+                <tr>
+                    <td>autoExecute</td>
+                    <td>false</td>
+                </tr>
+                <tr>
+                    <td>autoPreNotify</td>
+                    <td>false</td>
+                </tr>
+            </table>           
             <h6>Sample response</h6>
             <CodeBlockWithCopy language="json">
                 {`{
@@ -241,16 +268,41 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
     "transactionNote": "Transaction note"
 }`}
             </CodeBlockWithCopy>
-            <Callout type="warning">
-                <ul>
-                    <li>Note that the value of <code>frequency</code> must be <code>one time</code> for creating a one time mandate.</li>
-                    <li>The value of <code>creationMode</code> must be <code>collect</code> for creating an collect based mandate.</li>
-                    <li>The value of <code>initiationMode</code> must be <code>00</code> if <code>creationMode</code> is <code>collect</code></li>
-                    <li>The value of <code>recurrenceRule</code> must be <code>on</code> for creating a one time mandate.</li>
-                    <li>The value of <code>recurrenceValue</code> must be <code>0</code> for creating a one time mandate.</li>
-                    <li>The value of <code>autoExecute</code> and <code>autoPreNotify</code> must be{" "}<code>false</code> for creating a one time mandate.</li>
-                </ul>
-            </Callout>
+            <p><b>Request body parameter values for creating a collect based one time mandate</b></p>
+            <table>
+                <tr>
+                    <th>parameter</th>
+                    <th>value</th>
+                </tr>
+                <tr>
+                    <td>frequency</td>
+                    <td>one time</td>
+                </tr>
+                <tr>
+                    <td>creationMode</td>
+                    <td>collect</td>
+                </tr>
+                <tr>
+                    <td>initiationMode</td>
+                    <td>00 if creationMode is collect</td>
+                </tr>
+                <tr>
+                    <td>recurrenceValue</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>recurrenceRule</td>
+                    <td>on</td>
+                </tr>
+                <tr>
+                    <td>autoExecute</td>
+                    <td>false</td>
+                </tr>
+                <tr>
+                    <td>autoPreNotify</td>
+                    <td>false</td>
+                </tr>
+            </table>
             <h6>Sample response</h6>
             <CodeBlockWithCopy language="json">
                 {`{
