--- a/content/payments/umap/mandates/otm/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/otm/pre-debit-notify.mdx
@@ -86,19 +86,29 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 }`}
 </CodeBlockWithCopy>
 
-<Callout type="warning">
-    <ul>
-        <li><code>amount</code> must be as per the <code>amountRule</code> and <code>maxAmountLimit</code> configured while creating the mandate.</li>
-        <li><code>executionDate</code> must be <code>48 - 72 Hrs</code> ahead of current time.</li>
-        <li><code>sequenceNumber</code> must be <code>1</code> for a one time mandate.</li>
-    </ul>
-</Callout>
-
-<Callout type="note">
-    <ul>
-        <li><code>umn</code> can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</li>
-    </ul>
-</Callout>
+<p><b>Request body parameter values for sending pre debit notification for a one time mandate</b></p>
+<table>
+    <tr>
+        <th>parameter</th>
+        <th>value</th>
+    </tr>
+    <tr>
+        <td>amount</td>
+        <td>must be as per the <code>amountRule</code> and <code>maxAmountLimit</code> configured while creating the mandate</td>
+    </tr>
+    <tr>
+        <td>executionDate</td>
+        <td>must be <code>48 - 72 Hrs</code> ahead of current time</td>
+    </tr>
+    <tr>
+        <td>sequenceNumber</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>umn</td>
+        <td>can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</td>
+    </tr>
+</table>
 
 ###### Sample response
 
