--- a/content/payments/umap/mandates/recurring/create.mdx
+++ b/content/payments/umap/mandates/recurring/create.mdx
@@ -93,6 +93,36 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
     "transactionNote": "Transaction note"
 }`}
             </CodeBlockWithCopy>
+            <p><b>Request body parameter values for creating an intent based recurring mandate</b></p>
+            <table>
+                <tr>
+                    <th>parameter</th>
+                    <th>value</th>
+                </tr>
+                <tr>
+                    <td>creationMode</td>
+                    <td>intent or qr</td>
+                </tr>
+                <tr>
+                    <td>initiationMode</td>
+                    <td>
+                        <p>01 if creationMode is qr</p>
+                        <p>04 if creationMode is intent</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>autoExecute</td>
+                    <td>
+                        <p>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>false</code> then the merchant is responsible for triggering the pre debit notification and execution in every recurrence cycle.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>autoPreNotify</td>
+                    <td>
+                        <p>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>true</code> then no merchant intervention is needed and UMAP is responsible for triggering the pre debit notification and execution in every recurrence cycle.</p>
+                    </td>
+                </tr>
+            </table>
             <Card padding="nano" shape="rounded">
                 <details>
                     <summary>
@@ -201,19 +231,6 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     />
                 </details>
             </Card>
-            <Callout type="warning">
-                <ul>
-                    <li>The value of <code>creationMode</code> must be <code>qr</code> or <code>intent</code> for creating an intent based mandate.</li>
-                    <li>The value of <code>initiationMode</code> must be <code>01</code> if <code>creationMode</code> is <code>qr</code></li>
-                    <li>The value of <code>initiationMode</code> must be{" "} <code>04</code> if{" "} <code>creationMode</code> is{" "}<code>intent</code></li>
-                </ul>
-            </Callout>
-            <Callout type="note">
-                <ul>
-                    <li>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>false</code> then the merchant is responsible for triggering the pre debit notification and execution in every recurrence cycle.</li>
-                    <li>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>true</code> then no merchant intervention is needed and UMAP is responsible for triggering the pre debit notification and execution in every recurrence cycle.</li>
-                </ul>
-            </Callout>
             <h6>Sample response</h6>
             <CodeBlockWithCopy language="json">
                 {`{
@@ -351,6 +368,33 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
     "transactionNote": "Transaction note"
 }`}
             </CodeBlockWithCopy>
+            <p><b>Request body parameter values for creating a collect based recurring mandate</b></p>
+            <table>
+                <tr>
+                    <th>parameter</th>
+                    <th>value</th>
+                </tr>
+                <tr>
+                    <td>creationMode</td>
+                    <td>collect</td>
+                </tr>
+                <tr>
+                    <td>initiationMode</td>
+                    <td>00 if creationMode is collect</td>
+                </tr>
+                <tr>
+                    <td>autoExecute</td>
+                    <td>
+                        <p>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>false</code> then the merchant is responsible for triggering the pre debit notification and execution in every recurrence cycle.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>autoPreNotify</td>
+                    <td>
+                        <p>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>true</code> then no merchant intervention is needed and UMAP is responsible for triggering the pre debit notification and execution in every recurrence cycle.</p>
+                    </td>
+                </tr>
+            </table>
             <Card padding="nano" shape="rounded">
                 <details>
                     <summary>
@@ -459,18 +503,6 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     />
                 </details>
             </Card>
-            <Callout type="warning">
-                <ul>
-                    <li>The value of <code>creationMode</code> must be <code>collect</code> for creating a collect based mandate.</li>
-                    <li>The value of <code>initiationMode</code> must be <code>00</code> if <code>creationMode</code> is <code>collect</code></li>
-                </ul>
-            </Callout>
-            <Callout type="note">
-                <ul>
-                    <li>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>false</code> then the merchant is responsible for triggering the pre debit notification and execution in every recurrence cycle.</li>
-                    <li>If the value of <code>autoExecute</code> and <code>autoPreNotify</code> is <code>true</code> then no merchant intervention is needed and UMAP is responsible for triggering the pre debit notification and execution in every recurrence cycle.</li>
-                </ul>
-            </Callout>
             <h6>Sample response</h6>
             <CodeBlockWithCopy language="json">
                 {`{
