--- a/content/payments/umap/mandates/single-block-multi-debit/create.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/create.mdx
@@ -89,20 +89,56 @@ alt="Bridge"
 }`}
 </CodeBlockWithCopy>
 
-<Callout type="warning">
-    <ul>
-        <li>The value of <code>frequency</code> must be <code>as presented</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>creationMode</code> must be <code>qr</code> or <code>intent</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>initiationMode</code> must be <code>01</code> if <code>creationMode</code> is <code>qr</code></li>
-        <li>The value of <code>initiationMode</code> must be <code>04</code> if{" "} <code>creationMode</code> is{" "}<code>intent</code></li>
-        <li>The value of <code>recurrenceRule</code> must be <code>on</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>recurrenceValue</code> must be <code>0</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>autoExecute</code> and <code>autoPreNotify</code> must be <code>false</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>blockFunds</code> and <code>allowMultipleDebit</code> must be <code>true</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>purpose</code> must be <code>76</code> for creating a single block multi debit mandate.</li>
-        <li>The value of <code>customerRevocable</code> must be <code>false</code> for creating a single block multi debit mandate.</li>
-    </ul>
-</Callout>
+<p><b>Request body parameter values for creating an intent based single block multi debit mandate</b></p>
+<table>
+    <tr>
+        <th>parameter</th>
+        <th>value</th>
+    </tr>
+    <tr>
+        <td>frequency</td>
+        <td>as presented</td>
+    </tr>
+    <tr>
+        <td>recurrenceRule</td>
+        <td>on</td>
+    </tr>
+    <tr>
+        <td>recurrenceValue</td>
+        <td>0</td>
+    </tr>
+    <tr>
+        <td>blockFunds</td>
+        <td>true</td>
+    </tr>
+    <tr>
+        <td>purpose</td>
+        <td>76</td>
+    </tr>
+    <tr>
+        <td>customerRevocable</td>
+        <td>false</td>
+    </tr>
+    <tr>
+        <td>creationMode</td>
+        <td>intent or qr</td>
+    </tr>
+    <tr>
+        <td>initiationMode</td>
+        <td>
+            <p>01 if creationMode is qr</p>
+            <p>04 if creationMode is intent</p>
+        </td>
+    </tr>
+    <tr>
+        <td>autoExecute</td>
+        <td>false</td>
+    </tr>
+    <tr>
+        <td>autoPreNotify</td>
+        <td>false</td>
+    </tr>
+</table>
 
 <h6>Sample response</h6>
 
