--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -86,17 +86,21 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 }`}
 </CodeBlockWithCopy>
 
-<Callout type="warning">
-    <ul>
-        <li><code>amount</code> must be equal to the <code>amount</code> mentioned while sending mandate pre debit notification.</li>
-    </ul>
-</Callout>
-
-<Callout type="note">
-    <ul>
-        <li><code>umn</code> can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</li>
-    </ul>
-</Callout>
+<p><b>Request body parameter values for executing a recurring mandate</b></p>
+<table>
+    <tr>
+        <th>parameter</th>
+        <th>value</th>
+    </tr>
+    <tr>
+        <td>amount</td>
+        <td>must be equal to the <code>amount</code> mentioned while sending mandate pre debit notification</td>
+    </tr>
+    <tr>
+        <td>umn</td>
+        <td>can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</td>
+    </tr>
+</table>
 
 ###### Sample response
 
