--- a/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
@@ -82,12 +82,21 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 }`}
 </CodeBlockWithCopy>
 
-<Callout type="warning">
-    <ul>
-        <li>Note that the value of <code>amount</code> must be such that the cumulative amount debited for the given mandate post current debit is within the amount that is blocked in customer's account</li>
-        <li>The value of <code>umn</code> can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</li>
-    </ul>
-</Callout>
+<p><b>Request body parameter values for executing a recurring mandate</b></p>
+<table>
+    <tr>
+        <th>parameter</th>
+        <th>value</th>
+    </tr>
+    <tr>
+        <td>amount</td>
+        <td>must be such that the cumulative amount debited for the given mandate post current debit is within the amount that is blocked in customer's account</td>
+    </tr>
+    <tr>
+        <td>umn</td>
+        <td>can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</td>
+    </tr>
+</table>
 
 ###### Sample response
 
