add pre requisites for umap mandate notification pages

--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Mandates Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates" target="_blank">
+        UPI Autopay Overview ↗
+    </a>
+    <p>
+        Explore UMAP UPI Autopay products here
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### UPI Mandate Statuses
 
 A UPI mandate will flow through the below statuses throughout its lifecycle -
