--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Mandate Pause Operation Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates/generic/pause" target="_blank">
+        UPI Autopay Pause ↗
+    </a>
+    <p>
+        Read about UPI Autopay pause operation if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### Mandate Pause Initiated
 
 <CodeBlockWithCopy language="json">
