--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Mandate Revoke Operation Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates/generic/revoke" target="_blank">
+        UPI Autopay Revoke ↗
+    </a>
+    <p>
+        Read about UPI Autopay revoke operation if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### Mandate Revoke Initiated
 
 This notification will be sent only in case the revoke is initiated by the end user.
