--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Mandate Unpause Operation Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates/generic/unpause" target="_blank">
+        UPI Autopay Unpause ↗
+    </a>
+    <p>
+        Read about UPI Autopay unpause operation if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### Mandate Unpause Initiated
 
 <CodeBlockWithCopy language="json">
