--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -7,7 +7,18 @@ visible_in_sidebar: true
 
 ## Mandate Update Operation Notifications & Alerts
 
-The merchant webhooks for mandates being updated through UMAP. 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates/generic/update" target="_blank">
+        UPI Autopay Update ↗
+    </a>
+    <p>
+        Read about UPI Autopay update operation if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
+Merchant webhooks for mandates being updated through UMAP. 
 
 ### Mandate Update Initiated
 
