Add next steps in payments

--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -44,3 +44,14 @@ After the customer responds to the collect request, transaction details can be f
   src="https://storage.googleapis.com/strapi-assets/latest/collect/collect.png"
   alt="collect flow"
 />
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Create collect request",
+        slug: "/payments/umap/payments/collect-request",
+        title: "Start accepting UPI payments with Collect request",
+    }}
+/>
