--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -87,3 +87,14 @@ visible_in_sidebar: true
     <code>Create Collect Request API</code> ↗
 </a>
 <br/>
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Check collect request status",
+        slug: "/payments/umap/payments/collect-reques/check-collect-request-status",
+        title: "Check collect request status",
+    }}
+/>
