--- a/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
+++ b/content/payments/umap/payments/collect-request/verify-customer-vpa-api.mdx
@@ -68,3 +68,14 @@ visible_in_sidebar: true
 <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
 <code>Verify Customer VPA API</code> ↗
 </a>
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Create collect request",
+        slug: "/payments/umap/payments/collect-request/verify-customer-vpa-api",
+        title: "Create collect request",
+    }}
+/>
