--- a/content/payments/umap/payments/intent-qr.mdx
+++ b/content/payments/umap/payments/intent-qr.mdx
@@ -105,3 +105,13 @@ Following the initiation of the transaction, the system retrieves the payment de
   src="https://storage.googleapis.com/strapi-assets/latest/intent/intent.png"
   alt="intent qr flow"
 />
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description: "Create intent link",
+        slug: "/payments/umap/payments/intent-qr",
+        title: "Start accepting UPI payments with Intent QR",
+    }}
+/>
