--- a/content/payments/umap/payments/intent-qr/create-payment-link.mdx
+++ b/content/payments/umap/payments/intent-qr/create-payment-link.mdx
@@ -92,3 +92,14 @@ visible_in_sidebar: true
     <code>Create Payment Link API</code> ↗
 </a>
 <br/>
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Check payment link status",
+        slug: "/payments/umap/payments/intent-qr/check-payment-link-status",
+        title: "Check payment link status",
+    }}
+/>
