--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -34,3 +34,14 @@ Based on the outcome of the validation check, the UMAP system decides whether to
 <hr class="primary" />
 
 This TPV process ensures an additional layer of security, aligning payment transactions with pre-verified bank account details, thus minimizing the risk of fraudulent transactions and enhancing trust between merchants and customers.
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Create TPV request",
+        slug: "/payments/umap/payments/tpv",
+        title: "Create TPV request",
+    }}
+/>
