--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -139,3 +139,14 @@ The merchant generates a payment link. This unique link serves as the gateway fo
     <code>Create TPV API</code> ↗
 </a>
 <br/>
+
+<hr class="primary" />
+
+<NextPage
+    info={{
+        description:
+            "Check TPV status",
+        slug: "/payments/umap/payments/tpv/check-tpv-status",
+        title: "Check TPV status",
+    }}
+/>
