add pre requisites for umap refunds, disputes notification pages

--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Disputes Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/refunds-disputes" target="_blank">
+        Refunds & Disputes ↗
+    </a>
+    <p>
+        Read about disputes if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### Dispute Statuses
 
 UMAP is fully integrated with the National Payments Corporation of India's (NPCI) Unified Dispute & Issue Resolution (UDIR) framework. This integration allows merchants to handle refunds and resolve disputes efficiently, enhancing customer satisfaction while minimizing the risk of chargebacks and false disputes.
