--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -7,6 +7,17 @@ visible_in_sidebar: true
 
 ## Refunds Notifications & Alerts
 
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/refunds-disputes" target="_blank">
+        Refunds & Disputes ↗
+    </a>
+    <p>
+        Read about refunds if you haven't already
+    </p>
+</Card>
+
+<hr class="primary"/>
+
 ### Refund Statuses
 
 UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
