--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -50,8 +50,8 @@ After the customer responds to the collect request, transaction details can be f
 <NextPage
     info={{
         description:
-            "Create collect request",
-        slug: "/payments/umap/payments/collect-request",
+            "Verify customer VPA",
+        slug: "/payments/umap/payments/collect-request/verify-customer-vpa-api",
         title: "Start accepting UPI payments with Collect request",
     }}
 />
