add pre requisite link and sub notification page links on umap notification landing page

--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -6,3 +6,36 @@ visible_in_sidebar: true
 ---
 
 ## Notifications & Alerts
+
+<Row>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <a href="/payments/umap/merchant-onboarding" target="_blank">
+                Aggregator Merchant Onboarding ↗
+            </a>
+            <p>
+                If you are an aggregator explore other UMAP products here if you haven't already
+            </p>
+        </Card>
+    </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <a href="/payments/umap/api-integration/merchants" target="_blank">
+                Merchant API Integration ↗
+            </a>
+            <p>
+                If you are a merchant explore other UMAP products here if you haven't already
+            </p>
+        </Card>
+    </Portion>
+</Row>
+
+<hr class="primary"/>
+
+UMAP sends notifications to merchants for the following products
+<ul>
+    <li>Payments. Read more <a href="/payments/umap/mandates/notifications/payments" target="_blank">here</a></li>
+    <li>Mandates. Read more <a href="/payments/umap/mandates/notifications/mandates" target="_blank">here</a></li>
+    <li>Refunds. Read more <a href="/payments/umap/mandates/notifications/refunds" target="_blank">here</a></li>
+    <li>Disputes. Read more <a href="/payments/umap/mandates/notifications/disputes" target="_blank">here</a></li>
+</ul> 
