move /v1 path param from host to path in umap mandate apis

--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -25,7 +25,7 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -37,7 +37,7 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
+                <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
             </td>
         </tr>
         <tr>
