--- a/content/payments/umap/mandates/single-block-multi-debit/create.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/create.mdx
@@ -21,7 +21,7 @@ alt="Bridge"
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -33,7 +33,7 @@ alt="Bridge"
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates</code>
+                <code>/v1/merchants/mandates</code>
             </td>
         </tr>
         <tr>
@@ -208,7 +208,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -220,7 +220,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;id&#125;</code>
+                <code>/v1/merchants/mandates/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
