--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -42,7 +42,7 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -54,7 +54,7 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates/&#123;mandateId&#125;/revoke</code>
+                            <code>/v1/merchants/mandates/&#123;mandateId&#125;/revoke</code>
                         </td>
                     </tr>
                     <tr>
