--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -46,7 +46,7 @@ There are only two updates possible on a UPI mandate
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -58,7 +58,7 @@ There are only two updates possible on a UPI mandate
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates/&#123;mandateId&#125;/modify</code>
+                            <code>/v1/merchants/mandates/&#123;mandateId&#125;/modify</code>
                         </td>
                     </tr>
                     <tr>
