--- a/content/payments/umap/mandates/otm/create.mdx
+++ b/content/payments/umap/mandates/otm/create.mdx
@@ -28,7 +28,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -40,7 +40,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates</code>
+                            <code>/v1/merchants/mandates</code>
                         </td>
                     </tr>
                     <tr>
@@ -203,7 +203,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -215,7 +215,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates</code>
+                            <code>/v1/merchants/mandates</code>
                         </td>
                     </tr>
                     <tr>
@@ -370,7 +370,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -382,7 +382,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;id&#125;</code>
+                <code>/v1/merchants/mandates/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
