--- a/content/payments/umap/mandates/otm/execute.mdx
+++ b/content/payments/umap/mandates/otm/execute.mdx
@@ -34,7 +34,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -46,7 +46,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;mandateId&#125;/execute</code>
+                <code>/v1/merchants/mandates/&#123;mandateId&#125;/execute</code>
             </td>
         </tr>
         <tr>
@@ -147,7 +147,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -159,7 +159,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-executions/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-executions/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
