--- a/content/payments/umap/mandates/recurring/check-status.mdx
+++ b/content/payments/umap/mandates/recurring/check-status.mdx
@@ -35,7 +35,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -47,7 +47,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
+                            <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
                         </td>
                     </tr>
                     <tr>
@@ -108,7 +108,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -120,7 +120,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/payments/product-instances/&#123;mandateId&#125;/history</code>
+                            <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/history</code>
                         </td>
                     </tr>
                     <tr>
