--- a/content/payments/umap/mandates/recurring/create.mdx
+++ b/content/payments/umap/mandates/recurring/create.mdx
@@ -28,7 +28,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -40,7 +40,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates</code>
+                            <code>/v1/merchants/mandates</code>
                         </td>
                     </tr>
                     <tr>
@@ -303,7 +303,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -315,7 +315,7 @@ There are 2 ways to create a recurring mandate: **Intent based**, **Collect base
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates</code>
+                            <code>/v1/merchants/mandates</code>
                         </td>
                     </tr>
                     <tr>
@@ -570,7 +570,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -582,7 +582,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;id&#125;</code>
+                <code>/v1/merchants/mandates/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
