--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -38,7 +38,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -50,7 +50,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;mandateId&#125;/execute</code>
+                <code>/v1/merchants/mandates/&#123;mandateId&#125;/execute</code>
             </td>
         </tr>
         <tr>
@@ -152,7 +152,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -164,7 +164,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-executions/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-executions/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
