--- a/content/payments/umap/mandates/recurring/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/recurring/pre-debit-notify.mdx
@@ -38,7 +38,7 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -50,7 +50,7 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandates/&#123;mandateId&#125;/notify</code>
+                <code>/v1/merchants/mandates/&#123;mandateId&#125;/notify</code>
             </td>
         </tr>
         <tr>
@@ -156,7 +156,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -168,7 +168,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-pre-debit-notifications/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-pre-debit-notifications/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
