move /v1 path param from host to path in umap mandate generic operation apis

--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -48,7 +48,7 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -60,7 +60,7 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-operations/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-operations/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
