--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -52,7 +52,7 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -64,7 +64,7 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-operations/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-operations/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
