--- a/content/payments/umap/mandates/generic/update.mdx
+++ b/content/payments/umap/mandates/generic/update.mdx
@@ -148,7 +148,7 @@ There are only two updates possible on a UPI mandate
                     <tr>
                         <th>Staging Host</th>
                         <td>
-                            <code>https://umap-dev-core.setu.co/api/v1</code>
+                            <code>https://umap-dev-core.setu.co/api</code>
                         </td>
                     </tr>
                     <tr>
@@ -160,7 +160,7 @@ There are only two updates possible on a UPI mandate
                     <tr>
                         <th>Path</th>
                         <td>
-                            <code>/merchants/mandates/&#123;mandateId&#125;/modify</code>
+                            <code>/v1/merchants/mandates/&#123;mandateId&#125;/modify</code>
                         </td>
                     </tr>
                     <tr>
@@ -241,7 +241,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -253,7 +253,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/mandate-operations/&#123;id&#125;</code>
+                <code>/v1/merchants/mandate-operations/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
