move /v1 path param from host to path in umap refund dispute apis

--- a/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
@@ -25,7 +25,7 @@ visible_in_sidebar: true
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -37,7 +37,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/refunds/&#123;id&#125;</code>
+                <code>/v1/merchants/refunds/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
