--- a/content/payments/umap/refunds-disputes/create-refund-api.mdx
+++ b/content/payments/umap/refunds-disputes/create-refund-api.mdx
@@ -14,7 +14,7 @@ visible_in_sidebar: true
         <tr>
             <th>Staging Host</th>
             <td>
-                <code>https://umap-dev-core.setu.co/api/v1</code>
+                <code>https://umap-dev-core.setu.co/api</code>
             </td>
         </tr>
         <tr>
@@ -26,7 +26,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/refunds</code>
+                <code>/v1/merchants/refunds</code>
             </td>
         </tr>
         <tr>
