make payment status changes in payment section.

--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -49,3 +49,5 @@ This guide will help you get started with UMAP integration as an Merchant.
         </Card>
     </Portion>
 </Row>
+
+<WasPageHelpful />
