--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -64,3 +64,5 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
 <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"target="_blank">
 <code>Check VPA Availability API</code> ↗
 </a>
+
+<WasPageHelpful />
