--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -114,3 +114,5 @@ Create merchants in UPI with this API by providing business details & aggregator
 <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"target="_blank">
 <code>Create Merchant</code> ↗
 </a>
+
+<WasPageHelpful />
