--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -70,3 +70,5 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
 <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
 <code>Create VPA API</code> ↗
 </a>
+
+<WasPageHelpful />
