--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -75,3 +75,5 @@ These steps and conditional flows ensure merchants can efficiently manage transa
         title: "Mandates",
     }}
 />
+
+<WasPageHelpful />
