--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -55,3 +55,5 @@ After the customer responds to the collect request, transaction details can be f
         title: "Start accepting UPI payments with Collect request",
     }}
 />
+
+<WasPageHelpful />
