--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -45,3 +45,5 @@ This TPV process ensures an additional layer of security, aligning payment trans
         title: "Create TPV request",
     }}
 />
+
+<WasPageHelpful />
