--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -49,3 +49,5 @@ UMAP caters for two specific types of users, `Aggregators` and `Merchants`. Befo
         </Card>
     </Portion>
 </Row>
+
+<WasPageHelpful />
