--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -76,20 +76,44 @@ This API can be called to update the information associated with the merchant li
 <code>Update Merchant Configs API</code> ↗
 </a>
 
-<NextPage
-    info={{
-        description:
-            "Enable UPI payent with QR, Collect & TPV.",
-        slug: "/payments/umap/payments",
-        title: "Payments",
-    }}
-/>
+<hr class="primary" />
 
-<NextPage
-    info={{
-        description:
-            "Enable recurring payments with UPI Autopay.",
-        slug: "/payments/umap/mandates",
-        title: "Mandates",
-    }}
-/>
+<Row>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <Text
+                size="small"
+                weight="600"
+                textColor="slate-60"
+                marginBottom="micro"
+            >
+                READ ALSO &rarr;
+            </Text>
+            <p>Payments</p>
+            <a
+                href="/payments/umap/payments"
+                target="_blank"
+            >
+                Enable UPI payments with QR, Collect & TPV ->
+            </a>
+        </Card>
+    </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <Text
+                size="small"
+                weight="600"
+                textColor="slate-60"
+                marginBottom="micro"
+            >
+                READ ALSO &rarr;
+            </Text>
+            <p>Mandates</p>
+            <a href="/payments/umap/mandates" target="_blank">
+                Enable recurring payments with UPI Autopay ->
+            </a>
+        </Card>
+    </Portion>
+</Row>
+
+<WasPageHelpful />
