--- a/content/payments/umap/payments/tpv/check-status.mdx
+++ b/content/payments/umap/payments/tpv/check-status.mdx
@@ -1,15 +1,14 @@
 ---
-sidebar_title: Verify Customer VPA
-page_title: UMAP - Payments - Verify Customer VPA API
-order: 1
+sidebar_title: Check Status
+page_title: UMAP - Payments - TPV - Check Payment Status
+order: 2
 visible_in_sidebar: true
 ---
 
-## Verify Customer VPA
 
+## Check tpv payment status
 
-<p>The merchant can verify the customer vpa before initiating the collect request. This is an <b><i>optional</i></b> step.</p> 
-<p>This gives a merchant an information about the <b><i>customer vpa, payment mode</i></b> which helps the merchant to decide whether to initiate the collect request or not.</p>
+<p>The merchant can use the <b><i>check status API</i></b> to check the tpv payment status</p>
 
 <table>
     <tbody>
@@ -22,13 +21,13 @@ visible_in_sidebar: true
         <tr>
             <th>Method</th>
             <td>
-                <code>POST</code>
+                <code>GET</code>
             </td>
         </tr>
         <tr>
             <th>Path</th>
             <td>
-                <code>/v1/merchants/customer-vpas/verify</code>
+                <code>/v1/merchants/payments/product-instances/&#123;tpvId&#125;/last</code>
             </td>
         </tr>
         <tr>
@@ -52,47 +51,46 @@ visible_in_sidebar: true
         <tr>
             <th>API Reference</th>
             <td>
-                <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
-                    Verify Customer VPA ↗
+                <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">
+                    Check Payment Status ↗
                 </a>
             </td>
         </tr>
     </tbody>
 </table>
 
-###### Sample request
-
-<CodeBlockWithCopy language="json">
-    {`{
-    "customerVpa": "dekup@okokaxis",
-    "merchantReferenceId": "1240689979139556557"
-}`}
-</CodeBlockWithCopy>
-
 ###### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
+  "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
-  "customerName": "deku",
-  "customerVpa": "ram@okhdfc",
+  "currency": "INR",
+  "customerAccountType": "savings",
+  "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
   "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "merchantReferenceId": "1240689979139556557",
-  "status": "pending"
+  "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+  "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "reason": {
+    "code": "unable-to-fulfill-request",
+    "desc": "unable-to-fulfill-request",
+    "npciErrCode": "YG",
+    "npciErrDesc": "MERCHANT ERROR (PAYEE PSP)",
+    "npciRespCode": "YG",
+    "npciRespDesc": "MERCHANT ERROR (PAYEE PSP)"
+  },
+  "refId": "1240689979139556558",
+  "rrn": "124068997913",
+  "status": "initiated",
+  "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
+  "txnNote": "testpay"
 }`}
 </CodeBlockWithCopy>
 
-
-<hr class="primary" />
-
-<NextPage
-    info={{
-        description:
-            "Create collect request",
-        slug: "/payments/umap/payments/collect-request/create-collect-request",
-        title: "Create collect request",
-    }}
-/>
+**In the above response:**
+- `id` is a unique ID that is associated with this tpv payment and can be used to track it later.
+- `reason` object is only populated when there are errors from the NPCI.
 
 <WasPageHelpful />
