--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -43,3 +43,5 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
         title: "API Integration",
     }}
 />
+
+<WasPageHelpful />
