--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -45,3 +45,5 @@ This guide will help you get started with UMAP integration as an Merchant.
         title: "API Integration",
     }}
 />
+
+<WasPageHelpful />
