fix create-tpv redirect from main tpv page

--- a/content/payments/umap/payments/intent-qr/create-payment-link.mdx
+++ b/content/payments/umap/payments/intent-qr/create-payment-link.mdx
@@ -247,7 +247,7 @@ visible_in_sidebar: true
 <NextPage
     info={{
         description:
-            "Check payment status associated with payment link or qr.",
+            "Check payment status associated with payment link.",
         slug: "/payments/umap/payments/intent-qr/check-status",
         title: "Check payment status",
     }}
