fix api details table in payments

--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -24,7 +24,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>v1/merchants/collect</code>
+                <code>/v1/merchants/collect</code>
             </td>
         </tr>
         <tr>
