--- a/content/payments/umap/payments/tpv/create-tpv.mdx
+++ b/content/payments/umap/payments/tpv/create-tpv.mdx
@@ -173,7 +173,7 @@ Following the initiation of the transaction, the system retrieves the payment de
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/tpv/&#123;id&#125;</code>
+                <code>/v1/merchants/tpv/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
