fix create collect request heading

--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Payments - Create Collect Request API
+page_title: UMAP - Payments - Create Collect Request
 order: 2
 visible_in_sidebar: true
 ---
 
-## Create Collect Request API
+## Create Collect Request
 
 <table>
     <tbody>
