--- a/content/payments/umap/payments/collect-request/check-status.mdx
+++ b/content/payments/umap/payments/collect-request/check-status.mdx
@@ -26,7 +26,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/v1/merchants/collect/&#123;collectRequestId&#125;/last</code>
+                <code>/v1/merchants/payments/product-instances/&#123;collectRequestId&#125;/last</code>
             </td>
         </tr>
         <tr>
